v1.0.38: Fix queue Move dropdown clipping off right edge of viewport
Align dropdown to right edge of button so it opens leftward.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2278,8 +2278,8 @@ nav .nav-toggle .nav-toggle-icon {
 }
 
 .queue-move-menu {
-    right: auto;
-    left: 0;
+    right: 0;
+    left: auto;
     min-width: 120px;
 }
 
